<resources>
    <string name="app_name">Klin Fix</string>
    <string name="logo">logo</string>
    <string name="name">Name</string>
    <string name="name_hint">Rahmatsyah</string>
    <string name="email">Email</string>
    <string name="email_hint">name@company.com</string>
    <string name="password">Password</string>
    <string name="password_hint">********</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Mobile Phone Number</string>
    <string name="register">Register</string>
    <string name="login_suggest">Already have an account? <b>Login</b></string>
    <string name="terms_title">By singing up you have agreed to our</string>
    <string name="terms_sub_title">Terms of Use and Privacy Policy</string>
    <string name="number_hint">+62853493*****</string>
    <string name="username">Username</string>
    <string name="username_hint">rahmat</string>
    <string name="register_suggest">Doesn\'t have an account yet? <b>Register</b></string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="general_cleaning">General Clean</string>
    <string name="klin">Klin</string>
    <string name="deep_cleaning">Deep Cleaning</string>
    <string name="baby_bed">Baby Bed</string>
    <string name="sofa">Sofa</string>
    <string name="fix">Fix</string>
    <string name="roof">Roof</string>
    <string name="brick">Brick</string>
    <string name="electric">Electric</string>
    <string name="water">Water</string>
    <string name="bed">Bed</string>
    <string name="floor">Floor</string>
    <string name="address">Address</string>
    <string name="address_hint">Jl Semanggi Timur Kav 3, Malang, Jawa timur</string>
    <string name="number_phone">Number Phone</string>
    <string name="number_phone_hint">0832423****</string>
    <string name="date_service">Date Service</string>
    <string name="memo">Memo</string>
    <string name="order">Order</string>
    <string name="location">Location</string>
</resources>
